# fastapi-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  codingrule.md  docker-compose.local.yml  main.py  project.md  pyproject.toml  pytest.ini  requirements.txt  start.sh
.github/: commit_guide.instructions.md
.tasks/: 2025-02-02_chat_knowledge_gate_implementation.md  2025-02-03_1_audio_chunk_api_v2.md  2025-03-09_1_task_refactor_to_meeting_items.md  2025-04-06_1_version_module.md
api/: index.py
app/constants/: __init__.py  messages.py
app/core/: config.py  vault_loader.py
app/db/: __init__.py
app/exception_handlers/: __init__.py  error_middleware.py  http_exception.py
app/jobs/: __init__.py  celery_worker.py
app/models/: __init__.py  base.py  user.py  version.py
app/modules/: __init__.py
app/modules/admin/: CHANGELOG.md
app/modules/admin/crud/: user_admin.py
app/modules/admin/routes/v1/: auth_admin.py  user_admin.py
app/modules/admin/schemas/: auth_admin.py  user.py
app/modules/admin/services/: auth_admin.py  user_admin.py
app/modules/admin/utils/: auth.py
app/modules/common/: CHANGELOG.md  __init__.py
app/modules/common/config/: timeout_config.py
app/modules/common/middleware/: __init__.py  response_wrapping.py  timeout_middleware.py
app/modules/common/routes/: __init__.py
app/modules/common/schemas/: common.py
app/modules/common/services/: __init__.py
app/modules/common/utils/: auth.py  copilot.py  email.py  email_templates.py  error_codes.py  http_client.py  llm.py  logging.py  minio.py  qdrant.py  redis.py  request_tracking.py  response.py  timeout_utils.py
app/modules/users/: CHANGELOG.md
app/modules/users/crud/: __init__.py  user.py
app/modules/users/routes/v1/: auth.py  user.py
app/modules/users/schemas/: auth.py  user.py
app/modules/users/services/: auth.py  user.py
app/modules/users/utils/: auth.py
app/modules/version/crud/: version.py
app/modules/version/routes/v1/: __init__.py  version.py
app/modules/version/schemas/: version.py
app/modules/version/services/: version.py
docs/openapi/: error_codes.md  user-api.yaml
templates/: 02_API_Naming_Convention.md  03_API_Response_Guideline.md  04_Error_Code_Guideline.md  05_API_Timeout_Configuration.md  06_Readme.md  07_TL_QA_review_checklist.md  README.md
