[project]
name = "fastapi-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioredis==2.0.1",
    "alembic==1.18.4",
    "amqp==5.3.1",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "async-timeout==5.0.1",
    "bcrypt==5.0.0",
    "billiard==4.2.4",
    "brotli==1.2.0",
    "cachetools==7.0.5",
    "celery==5.6.3",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "click==8.3.2",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "cryptography==46.0.7",
    "cssselect==1.4.0",
    "cssselect2==0.9.0",
    "cssutils==2.11.1",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "faker==40.15.0",
    "fastapi==0.136.0",
    "fonttools==4.62.1",
    "google-api-core==2.30.3",
    "google-api-python-client==2.100.0",
    "google-auth==2.49.2",
    "google-auth-httplib2==0.3.1",
    "google-auth-oauthlib==1.2.0",
    "googleapis-common-protos==1.74.0",
    "grpcio==1.80.0",
    "h11==0.16.0",
    "h2==4.3.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httplib2==0.31.2",
    "httpx==0.28.1",
    "hyperframe==6.1.0",
    "idna==3.11",
    "kombu==5.6.2",
    "loguru==0.7.2",
    "lxml==6.1.0",
    "mako==1.3.11",
    "markdown2==2.5.5",
    "markupsafe==3.0.3",
    "minio==7.2.20",
    "more-itertools==11.0.2",
    "msal==1.36.0",
    "numpy==2.4.4",
    "oauthlib==3.3.1",
    "packaging==26.1",
    "passlib==1.7.4",
    "pillow==12.2.0",
    "portalocker==3.2.0",
    "premailer==3.10.0",
    "prompt-toolkit==3.0.52",
    "proto-plus==1.27.2",
    "protobuf==7.34.1",
    "pyasn1==0.6.3",
    "pyasn1-modules==0.4.2",
    "pycparser==3.0",
    "pycryptodome==3.23.0",
    "pydantic==2.13.2",
    "pydantic-core==2.46.2",
    "pydantic-settings==2.13.1",
    "pydyf==0.12.1",
    "pyjwt==2.12.1",
    "pymupdf==1.25.5",
    "pymysql==1.1.2",
    "pyparsing==3.3.2",
    "pyphen==0.17.2",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.2.0",
    "python-dotenv==1.2.2",
    "python-magic==0.4.27",
    "python-multipart==0.0.26",
    "pytz==2025.2",
    "qdrant-client==1.17.1",
    "redis==7.4.0",
    "regex==2026.4.4",
    "requests==2.33.1",
    "requests-oauthlib==2.0.0",
    "setuptools==82.0.1",
    "six==1.17.0",
    "sqlalchemy==2.0.49",
    "sqlmodel==0.0.38",
    "starlette==1.0.0",
    "tenacity==9.1.4",
    "tiktoken==0.12.0",
    "tinycss2==1.5.1",
    "tinyhtml5==2.1.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2026.1",
    "tzlocal==5.3.1",
    "uritemplate==4.2.0",
    "urllib3==2.6.3",
    "uvicorn==0.44.0",
    "vine==5.1.0",
    "wcwidth==0.6.0",
    "weasyprint==68.1",
    "webencodings==0.5.1",
    "wsproto==1.3.2",
    "yagmail==0.15.293",
    "zopfli==0.4.1",
]

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]
line-length = 9999

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
    "UP045", # Optional allow
    "UP006", "F821", "UP035", "E712"
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.pytest.ini_options]
# Ignore all warnings during tests
filterwarnings = [
    "ignore",
]
# Test discovery
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Output options
addopts = "-v --tb=short"
testpaths = ["tests"]
